@@ -23,6 +23,9 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-01-24  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Palm pixmap supported contributed by Christopher R. Hawks.
+
 2002-01-21  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Fixed occasional small memory leak associated with exceptions.
   * Persistent cache is no longer updated (MPC coder).
