@@ -90,7 +90,7 @@ The number of characters that were translated from
 <blockquote>GetTypeMetrics() returns the following information for the specified font and text: </blockquote><DL><DT><DD><DL>
 <dd><p></p><dt><STRONG><A NAME="item_o">o</A></STRONG><BR>
 <DD>
-character width o character height o ascent o descent o text width o text height o maximum horizontal advance
+character width o character height o ascent o descent o text width o text height o maximum horizontal advance o underline position o underline thickness
 <P></P></DL></DL>
 <P>The format of the GetTypeMetrics method is:</P>
 <blockquote>unsigned int GetTypeMetrics ( <A HREF="types/Image.html">Image</A> *image, const <A HREF="types/DrawInfo.html">DrawInfo</A> *draw_info, TypeMetric *metrics ); </blockquote><P>
